# funny-img

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  re.txt
.github/workflows/: cmake-multi-platform.yml
src/: main_img.cpp  main_img_test.cpp
src/img/: bmp.hpp  bmp_error.hpp  deflate.hpp  deflate_error.hpp  deflate_generator.hpp  generator.hpp  inflate.cpp  inflate.hpp  inflate2.hpp  out.txt  pixel.hpp  png.hpp  png_error.hpp
